# galactic-gaze

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  pyproject.toml  requirements.txt
.github/: codecov.yml
.github/workflows/: test.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/src/gaze/api/: app.py
backend/src/gaze/api/routes/: auth.py  experiments.py  models.py
backend/src/gaze/cmdline/: train.py
backend/src/gaze/configs/: eval.yaml  train.yaml
backend/src/gaze/datamodules/data/: __init__.py  _generate_moon_points.py
backend/src/gaze/models/: __init__.py  diffusion.py  flow_matching.py  gan.py  normalizing_flow.py  vae.py
backend/src/gaze/models/components/: __init__.py  affine_coupling_layer.py  diffusion.py  flow_masks.py  flow_matching.py  fnn.py  gan.py  normalizing_flow.py  vae.py
backend/src/gaze/utils/: pylogger.py  rich_utils.py
backend/tests/gaze/cmdline/: test_eval.py
backend/tests/gaze/helpers/: run_if.py
client/src/services/: apiService.js
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Button.tsx  ModelCard.tsx  SliderInput.css  SliderInput.tsx  Spinner.css  Spinner.tsx
frontend/src/pages/: MainPage.css  MainPage.tsx
frontend/src/services/: api.js
frontend/src/utils/: generateGalaxyPoints.tsx  modelsData.tsx
src/gaze/: app.py  config.py
src/gaze/api/: app.py
src/gaze/api/routes/: experiments.py  models.py
src/gaze/datamodules/: toy_datamodule.py
src/gaze/datamodules/data/: _generate_galaxy_points.py
src/gaze/models/: flow_matching.py  normalizing_flow.py  vae.py
src/gaze/models/components/: __init__.py  diffusion.py  gan.py  losses.py  vae.py
tests/gaze/cmdline/: test_eval.py
